--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,32 @@
 :root {
   --brand-color: #2e2f42;
 }
-.button:hover,
-.button:focus {
-  cursor: pointer;
-}
 .body {
   color: var(--brand-color);
 }
 .name {
-color: var(--brand-color)
-font-family: Raleway;
-font-size: 18px;
-font-style: normal;
-font-weight: 800;
-line-height: 21px;
-letter-spacing: 0.54px;
-text-transform: uppercase;
+  color: var(--brand-color);
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 21px;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+}
+.navigation {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+adress {
+  color: var(--brand-color);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+.button:hover,
+.button:focus {
+  cursor: pointer;
 }
