--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,42 @@
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
-adress {
-  color: var(--brand-color);
+.address a {
+  color: #434455;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
-.button:hover,
-.button:focus {
+button:hover,
+button:focus {
   cursor: pointer;
+}
+
+button {
+  color: #4d5ae5;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+}
+button > .button-all {
+  color: #fff;
+}
+h3 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1, 2;
+  letter-spacing: 0.4px;
+}
+ul > p {
+  color: #434455;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
 }
