--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
   text-transform: uppercase;
 }
 .navigation {
+  color: var(--brand-color);
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
