--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,61 @@
 :root {
   --brand-color: #2e2f42;
+  --brand-color2: #434455;
+  --background-color: #ffffff;
+  --logo-color: #4d5ae5;
+  --grey: #f4f4fd;
 }
 .body {
   color: var(--brand-color);
+  font-family: "Roboto", sans-serif;
 }
-.title-website {
-  color: var(--brand-color);
-  font-family: Raleway;
+.logo-header {
+  color: var(--logo-color);
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 800;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  text-decoration: none;
 }
-.navigation {
+.logo-header-st {
+  color: var(--brand-color);
+}
+.list {
+  list-style: none;
+}
+.link {
   color: var(--brand-color);
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
-.address a {
-  color: #434455;
+.link:hover {
+  color: #404bbf;
+}
+.contact {
+  color: var(--brand-color2);
+  font-style: normal;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  text-decoration: none;
+}
+.contact:hover {
+  color: #404bbf;
 }
 button:hover,
 button:focus {
   cursor: pointer;
 }
-h1 {
+.first-section {
+  background-color: var(--brand-color);
+}
+.main-title {
   color: #ffffff;
   text-align: center;
   font-size: 56px;
@@ -40,22 +64,37 @@ h1 {
   line-height: 1, 07;
   letter-spacing: 1.12px;
 }
-button {
-  color: #4d5ae5;
+.button {
+  color: var(--logo-color);
+  background-color: var(--grey);
+  font-family: "Roboto", sans-serif;
   text-align: center;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.64px;
+  letter-spacing: 0.04em;
 }
 .button-order {
   color: #fff;
+  background-color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 }
-.button-all {
-  color: #fff;
+.button-order:hover {
+  background-color: #404bbf;
 }
-section > h2 {
+
+.button:hover {
+  color: #ffffff;
+  background-color: #404bbf;
+}
+.section-title {
   text-align: center;
   font-size: 36px;
   font-style: normal;
@@ -63,6 +102,12 @@ section > h2 {
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+}
+.our-team {
+  background-color: #f4f4fd;
+}
+.employees {
+  background-color: #ffffff;
 }
 .title {
   font-size: 20px;
@@ -80,6 +125,11 @@ section > h2 {
   letter-spacing: 0.32px;
 }
 .name {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
   text-align: center;
 }
 .job-name {
@@ -93,34 +143,40 @@ section > h2 {
 }
 
 .img-description {
+  color: var(--brand-color)
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  line-height: 1, 2;
-  letter-spacing: 0.4px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
-ul > p {
+.category {
   color: #434455;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
 }
-footer > a {
-  color: #f4f4fd;
-  font-family: Raleway;
+
+.footer {
+  background-color: var(--brand-color);
+}
+.logo-footer {
+  color: var(--logo-color);
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 800;
   line-height: 1.16;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  text-decoration: none;
 }
-a > span {
-  color: #4d5ae5;
+.logo-footer-st {
+  color: #f4f4f4;
 }
-footer > p {
+.footer-text {
   color: #f4f4fd;
   font-size: 16px;
   font-style: normal;
