--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ button:focus {
 }
 
 .img-description {
-  color: var(--brand-color)
+  color: var(--brand-color);
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
@@ -164,7 +164,7 @@ button:focus {
 }
 .logo-footer {
   color: var(--logo-color);
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway" sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 800;
