--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
   --grey: #f4f4fd;
 }
 .body {
-  color: var(--brand-color);
+  color: var(--brand-color2);
+  background-color: var(--background-color);
   font-family: "Roboto", sans-serif;
 }
 .logo-header {
@@ -36,6 +37,12 @@
 .link:hover {
   color: #404bbf;
 }
+.link:focus {
+  color: #404bbf;
+}
+.address {
+  font-style: normal;
+}
 .contact {
   color: var(--brand-color2);
   font-style: normal;
@@ -46,6 +53,9 @@
   text-decoration: none;
 }
 .contact:hover {
+  color: #404bbf;
+}
+.contact:focus {
   color: #404bbf;
 }
 button:hover,
@@ -89,10 +99,17 @@ button:focus {
 .button-order:hover {
   background-color: #404bbf;
 }
+.button-order:focus {
+  color: #404bbf;
+}
 
 .button:hover {
   color: #ffffff;
   background-color: #404bbf;
+  .button:focus {
+    color: #ffffff;
+    background-color: #404bbf;
+  }
 }
 .section-title {
   text-align: center;
@@ -164,20 +181,20 @@ button:focus {
 }
 .logo-footer {
   color: var(--logo-color);
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 800;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
 }
 .logo-footer-st {
-  color: #f4f4f4;
+  color: var(--grey);
 }
 .footer-text {
-  color: #f4f4fd;
+  color: var(--grey);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
